# IFS

./: CMakeLists.txt  LICENSE  README.md
shaders/: clear.comp  compile.cmd  display.comp  splat.comp
shaders/glsl/: clear.comp  display.comp  shader.frag  shader.vert  splat.comp
shaders/spv/: clear.comp.spv  display.comp.spv  shader.vert.spv  splat.comp.spv
src/: abstraction.h  abstraction_glfw.cpp  abstraction_glfw.h  abstraction_native.cpp  abstraction_native.h  main.cpp
